# Capital-Gains-and-Losses-Calculator

./: CHANGELOG.md  Capital-Gains-Losses-Calculator.cabal  LICENSE  README.MD  capitalGains.csv
Test Cases/: Test01.csv  Test02.csv
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
