cabal-version:      2.4
name:               Capital-Gains-Losses-Calculator
version:            0.1.0.0
synopsis:
    A simple calculator to read in a list of transactions from a csv and calculate the capital gains and/or losses of those transactions.

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Jacob Ellis
maintainer:         jacobellis.cpp@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Capital-Gains-Losses-Calculator
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, time >= 1.9.3 && <1.9.4, binary >=0.8.8.0 && <0.9.0, ansi-terminal
    hs-source-dirs:   app
    default-language: Haskell2010
